@@ -173,6 +173,7 @@ static const char	*gl_extensions;
 qboolean	is_3dfx = false;
 
 GLint		gl_max_size = 256;
+qboolean	gl_tex_NPOT = false;
 GLfloat		gl_max_anisotropy;
 float		gldepthmin, gldepthmax;
 
@@ -709,6 +710,19 @@ static void CheckAnisotropyExtensions (void)
 	}
 }
 
+static void CheckNonPowerOfTwoTextures (void)
+{
+	if (strstr(gl_extensions, "GL_ARB_texture_non_power_of_two"))
+	{
+		gl_tex_NPOT = true;
+		Con_SafePrintf("Found ARB_texture_non_power_of_two\n");
+	}
+	else
+	{
+		gl_tex_NPOT = false;
+	}
+}
+
 static void CheckStencilBuffer (void)
 {
 	have_stencil = false;
@@ -802,6 +816,8 @@ static void GL_ResetFunctions (void)
 	have8bit = false;
 	is8bit = false;
 	glColorTableEXT_fp = NULL;
+
+	gl_tex_NPOT = false;
 }
 
 /*
@@ -848,6 +864,7 @@ static void GL_Init (void)
 
 	CheckMultiTextureExtensions();
 	CheckAnisotropyExtensions();
+	CheckNonPowerOfTwoTextures();
 	CheckStencilBuffer();
 
 	glClearColor_fp (1,0,0,0);
